# earendil-SAR-system

./: CMakeLists.txt  README.md
__BUFFER__/: earendil_arduino_compat_old.h
__BUFFER__/src/lib/: gps_lib.h
__BUFFER__/test/: TX_GPS_Test1.ino  hh_proto.ino  screen.ino
__BUFFER__/test/Handheld_Prototype/hh_proto/includes/: bmp.h  gyro.h  mag.h  rfm.h  types.h
__BUFFER__/test/Handheld_Prototype/hh_proto/src/: bmp.cpp  gyro.cpp
cmake/earendil/compat/: Earendil_ArduinoCompat.cmake
cmake/earendil/core/: Earendil_SharedData.cmake  Earendil_TaskHandles.cmake
cmake/earendil/libraries/: Earendil_AccelGyro.cmake  Earendil_Altimeter.cmake  Earendil_Display.cmake  Earendil_GPS.cmake  Earendil_Magnetometer.cmake  Earendil_Radio.cmake  Earendil_uSDReader.cmake
code/: TX_GPS_Integration_Test.ino  TX_Radio_Integration.ino
docs/: _config.yml  index.md
docs/assets/css/: style.scss
include/: FreeRTOSConfig.h
include/compat/: earendil_arduino_compat.h
include/lib/: earendil_accelgyro.h
src/: FreeRTOS_Handheld.cpp  FreeRTOS_Handheld.h  freertos_init.cpp
src/compat/: earendil_arduino_compat.cpp
src/compat/Earendil_ArduinoCompat/: Earendil_ArduinoCompat.cpp  Earendil_ArduinoCompat.h
src/core/: Earendil_Utils.cpp  Earendil_Utils.h
src/core/Earendil_Mutexes/: Earendil_Mutexes.h
src/core/Earendil_SharedData/: Earendil_SharedData.h
src/core/Earendil_TaskHandles/: Earendil_TaskHandles.h
src/core/Earendil_Utils/: Earendil_Utils.cpp  Earendil_Utils.h
src/lib/: display_lib.h  radio_lib.cpp  radio_lib.h
src/libraries/: Earendil_Types.bak  Earendil_Types.h  Earendil_Utils.cpp  Earendil_Utils.h
src/libraries/Earendil_AccelGyro/: Earendil_AccelGyro.cpp  Earendil_AccelGyro.h  Earendil_AccelGyro_Task.cpp  Earendil_AccelGyro_Tasks.cpp  Earendil_AccelGyro_Utils.cpp
src/libraries/Earendil_AccelGyro/Earendil_AccelGyro_SharedData/: Earendil_AccelGyro_SharedData.h
src/libraries/Earendil_AccelGyro/Earendil_AccelGyro_TaskHandles/: Earendil_AccelGyro_TaskHandles.h
src/libraries/Earendil_Altimeter/: Earendil_Altimeter.cpp  Earendil_Altimeter.h  Earendil_Altimeter_Tasks.cpp  Earendil_Altimeter_Utils.cpp
src/libraries/Earendil_Altimeter/Earendil_Altimeter_SharedData/: Earendil_Altimeter_SharedData.h
src/libraries/Earendil_Altimeter/Earendil_Altimeter_TaskHandles/: Earendil_Altimeter_TaskHandles.h
src/libraries/Earendil_Display/: Earendil_Display.cpp  Earendil_Display.h  Earendil_Display_Tasks.cpp  Earendil_Display_Utils.cpp  menu.cpp
src/libraries/Earendil_Display/Earendil_Display_TaskHandles/: Earendil_Display_TaskHandles.h
src/libraries/Earendil_GPS/: Earendil_GPS.cpp  Earendil_GPS.h  Earendil_GPS_Tasks.cpp  Earendil_GPS_Utils.cpp
src/libraries/Earendil_GPS/Earendil_GPS_SharedData/: Earendil_GPS_SharedData.h
src/libraries/Earendil_GPS/Earendil_GPS_TaskHandles/: Earendil_GPS_TaskHandles.h
src/libraries/Earendil_Magnetometer/: Earendil_Magnetometer.cpp  Earendil_Magnetometer.h  Earendil_Magnetometer_Tasks.cpp  Earendil_Magnetometer_Utils.cpp
src/libraries/Earendil_Magnetometer/Earendil_Magnetometer_SharedData/: Earendil_Magnetometer_SharedData.h
src/libraries/Earendil_Magnetometer/Earendil_Magnetometer_TaskHandles/: Earendil_Magnetometer_TaskHandles.h
src/libraries/Earendil_Radio/: Earendil_Radio.cpp  Earendil_Radio.h  Earendil_Radio_Tasks.cpp  Earendil_Radio_Utils.cpp
src/libraries/Earendil_Radio/Earendil_Radio_SharedData/: Earendil_Radio_SharedData.h
src/libraries/Earendil_Radio/Earendil_Radio_TaskHandles/: Earendil_Radio_TaskHandles.h
src/libraries/Earendil_uSDReader/: Earendil_uSDReader.cpp  Earendil_uSDReader.h  Earendil_uSDReader_Tasks.cpp  Earendil_uSDReader_Utils.cpp
src/libraries/Earendil_uSDReader/Earendil_uSDReader_SharedData/: Earendil_uSDReader_SharedData.h
src/libraries/Earendil_uSDReader/Earendil_uSDReader_TaskHandles/: Earendil_uSDReader_TaskHandles.h
src/main/: Earendil.cpp  Earendil.h
src/run/: radio-rx-task.cpp
src/tasks/: earendil_accelgyro.cpp  earendil_altimeter.cpp  earendil_display.cpp  earendil_gps.cpp  earendil_magnetometer.cpp  earendil_radio.cpp  earendil_usdreader.cpp
test/: Pressure_test.ino  combi.ino.ino  magnetometer.ino
test/Handheld_Prototype/: README.md
test/Handheld_Prototype/hh_proto/: hh_proto.ino
test/Handheld_Prototype/hh_proto/includes/: lcd.h  my_gps.h
test/Handheld_Prototype/hh_proto/src/: lcd.cpp  mag.cpp  my_gps.cpp  rfm.cpp
